<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SunnyDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sunny Day</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_alerts">Alerts</string>
    <string name="menu_favourites">Favourites</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="meter_sec">Meter/Sec</string>
    <string name="miles_hour">Miles/Hour</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="settings">Settings</string>
    <string name="select_location">Select Location</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="temperature">Temperature</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="notifications">Notifications</string>
    <string name="current_location">Current Location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="confirm">Confirm</string>
    <string name="Location">Location</string>
    <string name="GPS">GPS</string>
    <string name="Map">Map</string>
    <string name="Temperature">Temperature</string>
    <string name="Celsius">Celsius</string>
    <string name="mph">Mph</string>
    <string name="kelvin">Kelvin</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">PRESSURE</string>
    <string name="clouds">CLOUDS</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="four_day_forecast">UPCOMING DAYS</string>
    <string name="fabbutton">fabButton</string>
    <string name="save">Save</string>
    <string name="initial_settings">Initial Settings</string>
    <string name="initial_setup">Initial Setup</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="no_daily_forecast">No Daily Forecast</string>
    <string name="no_hourly_forecast">No Hourly Forecast</string>
    <string name="last_update">Last Update:</string>
    <string name="search">SEARCH</string>
    <string name="enter_place_name">Enter Place Name</string>
    <string name="delete">DELETE</string>
    <string name="alarm">ALARM</string>
    <string name="notification">NOTIFICATION</string>
    <string name="date">DATE:</string>
    <string name="time_range">TIME RANGE:</string>
    <string name="alert_type">ALERT TYPE:</string>
</resources>