<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/c_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/c_favourites"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_alerts"
            android:icon="@drawable/c_alert"
            android:title="@string/menu_alerts" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/c_settings"
            android:title="@string/menu_settings" />


    </group>
</menu>