<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="?attr/colorSurface">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <TextView
            android:id="@+id/labelDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="Wed, 01 Jan 2025"
            android:textSize="18sp"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintStart_toEndOf="@id/labelDate"
            app:layout_constraintBaseline_toBaselineOf="@id/labelDate" />

        <TextView
            android:id="@+id/labelTimeRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/time_range"
            android:textSize="18sp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelDate" />

        <TextView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="→"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewFromTime"
            app:layout_constraintEnd_toStartOf="@id/textViewToTime"
            app:layout_constraintStart_toEndOf="@id/textViewFromTime" />

        <TextView
            android:id="@+id/textViewToTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="09:00 AM"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@id/textViewFromTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/arrow"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/textViewFromTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="08:00 AM"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/arrow"
            app:layout_constraintStart_toEndOf="@id/labelTimeRange"
            app:layout_constraintTop_toBottomOf="@id/labelDate"
            app:layout_constraintWidth_default="wrap" />

        <TextView
            android:id="@+id/labelAlertType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/alert_type"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewFromTime" />

        <TextView
            android:id="@+id/alertType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="22sp"
            app:layout_constraintWidth_default="wrap"
            app:layout_constraintStart_toEndOf="@id/labelAlertType"
            app:layout_constraintBaseline_toBaselineOf="@id/labelAlertType" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonDelete"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/brown"
            android:text="@string/delete"
            android:textSize="20sp"
            app:iconGravity="start"
            app:iconPadding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelAlertType" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>